* turn openstring value parameters into regular shortstring parameters     (mantis #14940 and #14941)   * only turn var/our shortstring parameters with a length of 255 into     openstring parameters with {$p+} (new tbf/tb0217.pp)
git-svn-id: trunk@14602 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7708,6 +7708,7 @@ tests/tbf/tb0215c.pp svneol=native#text/plain
 tests/tbf/tb0215d.pp svneol=native#text/plain
 tests/tbf/tb0215e.pp svneol=native#text/plain
 tests/tbf/tb0216.pp svneol=native#text/plain
+tests/tbf/tb0217.pp svneol=native#text/plain
 tests/tbf/ub0115.pp svneol=native#text/plain
 tests/tbf/ub0149.pp svneol=native#text/plain
 tests/tbf/ub0158a.pp svneol=native#text/plain
@@ -10176,6 +10177,8 @@ tests/webtbs/tw14812.pp svneol=native#text/plain
 tests/webtbs/tw14841.pp svneol=native#text/plain
 tests/webtbs/tw1485.pp svneol=native#text/plain
 tests/webtbs/tw1489.pp svneol=native#text/plain
+tests/webtbs/tw14941.pp svneol=native#text/plain
+tests/webtbs/tw14941a.pp svneol=native#text/plain
 tests/webtbs/tw14958a.pp svneol=native#text/plain
 tests/webtbs/tw14958b.pp svneol=native#text/plain
 tests/webtbs/tw14992a.pp svneol=native#text/pascal
