--- a/.gitattributes
+++ b/.gitattributes
@@ -9233,6 +9233,7 @@ tests/test/tstatic1.pp svneol=native#text/pascal
 tests/test/tstatic2.pp svneol=native#text/pascal
 tests/test/tstatic3.pp svneol=native#text/pascal
 tests/test/tstatic4.pp svneol=native#text/pascal
+tests/test/tstatic5.pp svneol=native#text/pascal
 tests/test/tstprocv.pp svneol=native#text/plain
 tests/test/tstring1.pp svneol=native#text/plain
 tests/test/tstring10.pp svneol=native#text/plain
