--- Merging r13803 into '.': U    rtl/objpas/classes/streams.inc U    rtl/objpas/classes/stringl.inc --- Merging r13804 into '.': U    packages/winunits-base/Makefile.fpc A    packages/winunits-base/src/winutils.pp U    packages/winunits-base/src/buildwinutilsbase.pp U    packages/winunits-base/Makefile
git-svn-id: branches/fixes_2_4@14624 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5173,6 +5173,7 @@ packages/winunits-base/src/shlobj.pp svneol=native#text/plain
 packages/winunits-base/src/tmschema.inc svneol=native#text/plain
 packages/winunits-base/src/uxtheme.pp svneol=native#text/plain
 packages/winunits-base/src/wininet.pp svneol=native#text/plain
+packages/winunits-base/src/winutils.pp svneol=native#text/pascal
 packages/winunits-base/src/winver.pp svneol=native#text/plain
 packages/winunits-base/tests/OOHelper.pp svneol=native#text/plain
 packages/winunits-base/tests/OOTest.pp svneol=native#text/plain
