* initial version of internal Mach-O/i386 assembler by Dmitry Boyarintsev     (mantis #15163)
git-svn-id: trunk@14628 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -234,6 +234,8 @@ compiler/m68k/r68ksup.inc svneol=native#text/plain
 compiler/m68k/ra68k.pas svneol=native#text/plain
 compiler/m68k/ra68kmot.pas svneol=native#text/plain
 compiler/m68k/rgcpu.pas svneol=native#text/plain
+compiler/macho.pas svneol=native#text/plain
+compiler/machoutils.pas svneol=native#text/plain
 compiler/mips/aasmcpu.pas svneol=native#text/plain
 compiler/mips/aoptcpu.pas svneol=native#text/plain
 compiler/mips/aoptcpub.pas svneol=native#text/plain
@@ -330,6 +332,7 @@ compiler/ogbase.pas svneol=native#text/plain
 compiler/ogcoff.pas svneol=native#text/plain
 compiler/ogelf.pas svneol=native#text/plain
 compiler/oglx.pas svneol=native#text/plain
+compiler/ogmacho.pas svneol=native#text/plain
 compiler/ogmap.pas svneol=native#text/plain
 compiler/optbase.pas svneol=native#text/plain
 compiler/optcse.pas svneol=native#text/plain
