--- Merging r13876 into '.': U    packages/winunits-base/Makefile.fpc U    packages/winunits-base/src/comobj.pp A    packages/winunits-base/src/comserv.pp U    packages/winunits-base/src/buildwinutilsbase.pp U    packages/winunits-base/Makefile --- Merging r13877 into '.': G    packages/winunits-base/src/comobj.pp --- Merging r13889 into '.': A    packages/winunits-com A    packages/winunits-com/fpmake.pp A    packages/winunits-com/Makefile.fpc A    packages/winunits-com/src A    packages/winunits-com/src/buildwinunitscom.pp A    packages/winunits-com/Makefile A    packages/winunits-com/examples --- Merging r13900 into '.': A    packages/fcl-extra A    packages/fcl-extra/fpmake.pp A    packages/fcl-extra/units A    packages/fcl-extra/units/i386-win32 A    packages/fcl-extra/Makefile.fpc A    packages/fcl-extra/src A    packages/fcl-extra/src/go32v2 A    packages/fcl-extra/src/os2 A    packages/fcl-extra/src/unix A    packages/fcl-extra/src/netware A    packages/fcl-extra/src/wince A    packages/fcl-extra/src/netwlibc A    packages/fcl-extra/src/dummy A    packages/fcl-extra/src/win A    packages/fcl-extra/Makefile A    packages/fcl-extra/examples
# revisions: 13876,13877,13889,13900
# comment: first batch of fcl-extra related revisions, up to the first  conflict
------------------------------------------------------------------------
r13876 | marco | 2009-10-16 22:32:59 +0200 (Fri, 16 Oct 2009) | 1 line
Changed paths:
   M /trunk/packages/winunits-base/Makefile
   M /trunk/packages/winunits-base/Makefile.fpc
   M /trunk/packages/winunits-base/src/buildwinutilsbase.pp
   M /trunk/packages/winunits-base/src/comobj.pp
   A /trunk/packages/winunits-base/src/comserv.pp

 * Comobj and comserv enhancements by mspiller, #14822 (which also bears relevance to 10569,14807)
------------------------------------------------------------------------
------------------------------------------------------------------------
r13877 | marco | 2009-10-16 23:58:12 +0200 (Fri, 16 Oct 2009)

--- a/.gitattributes
+++ b/.gitattributes
@@ -1355,6 +1355,9 @@ packages/fcl-db/tests/testdddiff.pp svneol=native#text/plain
 packages/fcl-db/tests/testfieldtypes.pas svneol=native#text/plain
 packages/fcl-db/tests/testsqlscript.pas svneol=native#text/plain
 packages/fcl-db/tests/toolsunit.pas -text
+packages/fcl-extra/Makefile svneol=native#text/plain
+packages/fcl-extra/Makefile.fpc svneol=native#text/plain
+packages/fcl-extra/fpmake.pp svneol=native#text/pascal
 packages/fcl-fpcunit/Makefile svneol=native#text/plain
 packages/fcl-fpcunit/Makefile.fpc svneol=native#text/plain
 packages/fcl-fpcunit/fpmake.pp svneol=native#text/plain
@@ -5163,6 +5166,7 @@ packages/winunits-base/src/comconst.pp svneol=native#text/plain
 packages/winunits-base/src/commctrl.pp svneol=native#text/plain
 packages/winunits-base/src/commdlg.pp svneol=native#text/plain
 packages/winunits-base/src/comobj.pp svneol=native#text/plain
+packages/winunits-base/src/comserv.pp svneol=native#text/plain
 packages/winunits-base/src/dwmapi.pp svneol=native#text/plain
 packages/winunits-base/src/flatsb.pp svneol=native#text/plain
 packages/winunits-base/src/htmlhelp.pp svneol=native#text/plain
@@ -5187,6 +5191,10 @@ packages/winunits-base/tests/hhex2.pp svneol=native#text/pascal
 packages/winunits-base/tests/testcom1.pp svneol=native#text/plain
 packages/winunits-base/tests/testcom2.pp svneol=native#text/plain
 packages/winunits-base/tests/testver.pp svneol=native#text/plain
+packages/winunits-com/Makefile svneol=native#text/plain
+packages/winunits-com/Makefile.fpc svneol=native#text/plain
+packages/winunits-com/fpmake.pp svneol=native#text/pascal
+packages/winunits-com/src/buildwinunitscom.pp svneol=native#text/pascal
 packages/winunits-jedi/Makefile svneol=native#text/plain
 packages/winunits-jedi/Makefile.fpc svneol=native#text/plain
 packages/winunits-jedi/fpmake.pp svneol=native#text/plain
