--- Merging r13962 into '.': U    rtl/inc/objpash.inc --- Merging r13963 into '.': U    packages/fcl-image/src/fpreadjpeg.pas U    packages/pasjpeg/src/jmemnobs.pas --- Merging r13965 into '.': U    utils/fpdoc/dwlinear.pp --- Merging r13967 into '.': U    packages/imagemagick/src/imagemagick.pas U    packages/imagemagick/src/magick_wand.pas U    packages/imagemagick/src/pixel.inc U    packages/imagemagick/src/pixel_wand.inc A    packages/imagemagick/src/cache.inc A    packages/imagemagick/examples/wandpixelaccess.pas U    packages/imagemagick/examples/image.png U    packages/imagemagick/examples/wanddemo.lpr --- Merging r13974 into '.': U    rtl/objpas/rtlconst.inc --- Merging r13975 into '.': U    rtl/inc/dynlibs.pas --- Merging r13979 into '.': G    rtl/inc/dynlibs.pas --- Merging r13986 into '.': U    rtl/darwin/Makefile.fpc U    rtl/darwin/Makefile --- Merging r13970 into '.': U    packages/fcl-db/src/base/dbconst.pas --- Merging r13995 into '.': G    rtl/inc/dynlibs.pas --- Merging r14000 into '.': U    packages/fcl-process/src/unix/process.inc --- Merging r14002 into '.': U    rtl/unix/cthreads.pp --- Merging r14007 into '.': A    utils/rmwait A    utils/rmwait/Makefile.fpc A    utils/rmwait/rmwait.pas --- Merging r14011 into '.': U    packages/paszlib/src/gzio.pas --- Merging r14012 into '.': G    packages/paszlib/src/gzio.pas
# revisions: 13962,13963,13965,13967,13974,13975,13979,13986,13970,13995,14000,14002,14007,14011,14012
------------------------------------------------------------------------
r13962 | florian | 2009-10-28 20:22:29 +0100 (Wed, 28 Oct 2009) | 2 lines
Changed paths:
   M /trunk/rtl/inc/objpash.inc

+ make TObject.Dispatch and DispatchStr virtual, patch by Paul Ishenin, resolves #14920

------------------------------------------------------------------------
------------------------------------------------------------------------
r13963 | michael | 2009-10-29 16:31:44 +0100 (Thu, 29 Oct 2009) | 1 line
Changed paths:
   M /trunk/packages/f

--- a/.gitattributes
+++ b/.gitattributes
@@ -2828,8 +2828,10 @@ packages/imagemagick/examples/image.png -text svneol=unset#image/png
 packages/imagemagick/examples/screenshot.lpr svneol=native#text/plain
 packages/imagemagick/examples/wanddemo.dpr svneol=native#text/plain
 packages/imagemagick/examples/wanddemo.lpr svneol=native#text/plain
+packages/imagemagick/examples/wandpixelaccess.pas svneol=native#text/plain
 packages/imagemagick/fpmake.pp svneol=native#text/plain
 packages/imagemagick/src/buildim.pp svneol=native#text/plain
+packages/imagemagick/src/cache.inc svneol=native#text/plain
 packages/imagemagick/src/cache_view.inc svneol=native#text/plain
 packages/imagemagick/src/compare.inc svneol=native#text/plain
 packages/imagemagick/src/constitute.inc svneol=native#text/plain
@@ -10541,6 +10543,8 @@ utils/ppdep.pp svneol=native#text/plain
 utils/ptop.pp svneol=native#text/plain
 utils/ptopu.pp svneol=native#text/plain
 utils/rmcvsdir.pp svneol=native#text/plain
+utils/rmwait/Makefile.fpc svneol=native#text/plain
+utils/rmwait/rmwait.pas svneol=native#text/plain
 utils/rstconv.pp svneol=native#text/plain
 utils/sim_pasc/Answers svneol=native#text/plain
 utils/sim_pasc/ChangeLog svneol=native#text/plain
