--- Merging r14184 into '.': U    rtl/linux/i386/si_dll.inc U    rtl/linux/x86_64/dllprt0.as A    tests/webtbs/uw14958.pp A    tests/webtbs/tw14958b.pp A    tests/webtbs/tw14958a.pp
# revisions: 14184
------------------------------------------------------------------------
r14184 | jonas | 2009-11-15 14:50:14 +0100 (Sun, 15 Nov 2009) | 3 lines
Changed paths:
   M /trunk/rtl/linux/i386/si_dll.inc
   M /trunk/rtl/linux/x86_64/dllprt0.as
   A /trunk/tests/webtbs/tw14958a.pp
   A /trunk/tests/webtbs/tw14958b.pp
   A /trunk/tests/webtbs/uw14958.pp

  * don't exit the program in the exit code of shared libraries under Linux
    (mantis #14958)

------------------------------------------------------------------------

git-svn-id: branches/fixes_2_4@14696 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9383,6 +9383,8 @@ tests/webtbs/tw1479.pp svneol=native#text/plain
 tests/webtbs/tw14798.pp svneol=native#text/plain
 tests/webtbs/tw1485.pp svneol=native#text/plain
 tests/webtbs/tw1489.pp svneol=native#text/plain
+tests/webtbs/tw14958a.pp svneol=native#text/plain
+tests/webtbs/tw14958b.pp svneol=native#text/plain
 tests/webtbs/tw1501.pp svneol=native#text/plain
 tests/webtbs/tw1532.pp svneol=native#text/plain
 tests/webtbs/tw1539.pp svneol=native#text/plain
@@ -10253,6 +10255,7 @@ tests/webtbs/uw13345c.pp svneol=native#text/plain
 tests/webtbs/uw13345y.pp svneol=native#text/plain
 tests/webtbs/uw13583.pp svneol=native#text/plain
 tests/webtbs/uw14124.pp svneol=native#text/plain
+tests/webtbs/uw14958.pp svneol=native#text/plain
 tests/webtbs/uw2004.inc svneol=native#text/plain
 tests/webtbs/uw2040.pp svneol=native#text/plain
 tests/webtbs/uw2266a.inc svneol=native#text/plain
