--- Merging r14320 into '.': U    rtl/win/winsock2.pp --- Merging r14325 into '.': U    rtl/inc/variants.pp --- Merging r14333 into '.': U    rtl/darwin/ptypes.inc --- Merging r14334 into '.': U    rtl/bsd/ostypes.inc --- Merging r14339 into '.': U    rtl/inc/system.inc U    rtl/inc/systemh.inc --- Merging r14348 into '.': U    rtl/solaris/termios.inc U    rtl/solaris/termiosproc.inc --- Merging r14352 into '.': U    rtl/unix/cwstring.pp --- Merging r14355 into '.': G    rtl/unix/cwstring.pp --- Merging r14415 into '.': U    packages/fcl-process/src/unix/simpleipc.inc --- Merging r14416 into '.': U    packages/openal/examples/Makefile.fpc A    packages/openal/examples/captureplaybackopenal.pas C    packages/openal/examples/Makefile --- Merging r14441 into '.': U    packages/fcl-db/src/sqlite/customsqliteds.pas --- Merging r14459 into '.': U    rtl/win/crt.pp --- Merging r14463 into '.': U    packages/fcl-web/src/fphtml.pp --- Merging r14469 into '.': U    packages/iconvenc/src/iconvert.inc --- Merging r14472 into '.': G    rtl/inc/variants.pp A    tests/webtbs/tw15296.pp Summary of conflicts:   Text conflicts: 1
# revisions: r14320,14325,14333,14334,14339,14348,14352,14355,14415,14416,14441,14459,14463,14469,14472
------------------------------------------------------------------------
r14320 | marco | 2009-12-04 09:37:18 +0100 (Fri, 04 Dec 2009) | 2 lines
Changed paths:
   M /trunk/rtl/win/winsock2.pp

 * group type to u_long as per mantis 15241

------------------------------------------------------------------------
------------------------------------------------------------------------
r14325 | paul | 2009-12-04 15:57:17 +0100 (Fri, 04 Dec 2009) | 1 line
Changed paths:
   M /trunk/rtl/inc/variants.pp

rtl: DoVarCopyComplex should copy variant strings by ref (reason: this is delphi compatible behavior)
------------------------------------------------------------------------
------------------------------------------------------------------------
r14333 | jonas |

--- a/.gitattributes
+++ b/.gitattributes
@@ -3972,6 +3972,7 @@ packages/openal/Makefile svneol=native#text/plain
 packages/openal/Makefile.fpc svneol=native#text/plain
 packages/openal/examples/Makefile svneol=native#text/plain
 packages/openal/examples/Makefile.fpc svneol=native#text/plain
+packages/openal/examples/captureplaybackopenal.pas svneol=native#text/plain
 packages/openal/examples/madopenal.pas svneol=native#text/plain
 packages/openal/fpmake.pp svneol=native#text/plain
 packages/openal/src/alch.inc svneol=native#text/plain
@@ -9397,6 +9398,7 @@ tests/webtbs/tw1489.pp svneol=native#text/plain
 tests/webtbs/tw14958a.pp svneol=native#text/plain
 tests/webtbs/tw14958b.pp svneol=native#text/plain
 tests/webtbs/tw1501.pp svneol=native#text/plain
+tests/webtbs/tw15296.pp svneol=native#text/plain
 tests/webtbs/tw1532.pp svneol=native#text/plain
 tests/webtbs/tw1539.pp svneol=native#text/plain
 tests/webtbs/tw1567.pp svneol=native#text/plain
