--- a/.gitattributes
+++ b/.gitattributes
@@ -8988,7 +8988,9 @@ tests/test/tgeneric15.pp svneol=native#text/plain
 tests/test/tgeneric16.pp svneol=native#text/plain
 tests/test/tgeneric17.pp svneol=native#text/plain
 tests/test/tgeneric18.pp svneol=native#text/pascal
+tests/test/tgeneric19.pp svneol=native#text/pascal
 tests/test/tgeneric2.pp svneol=native#text/plain
+tests/test/tgeneric20.pp svneol=native#text/pascal
 tests/test/tgeneric3.pp svneol=native#text/plain
 tests/test/tgeneric4.pp svneol=native#text/plain
 tests/test/tgeneric5.pp svneol=native#text/plain
