--- Merging r14149 into '.': A    packages/gdbint/gen-gdblib-inc.sh --- Merging r14154 into '.': U    packages/gdbint/gen-gdblib-inc.sh --- Merging r14161 into '.': G    packages/gdbint/gen-gdblib-inc.sh --- Merging r14374 into '.': G    packages/gdbint/gen-gdblib-inc.sh --- Merging r14375 into '.': U    packages/gdbint/src/gdbint.pp --- Merging r14376 into '.': G    packages/gdbint/src/gdbint.pp --- Merging r14377 into '.': G    packages/gdbint/src/gdbint.pp --- Merging r14378 into '.': G    packages/gdbint/src/gdbint.pp --- Merging r14380 into '.': G    packages/gdbint/src/gdbint.pp --- Merging r14381 into '.': G    packages/gdbint/gen-gdblib-inc.sh
# revisions: 14149,14154,14161,14374,14375,14376,14377,14378,14380,14381
------------------------------------------------------------------------
r14149 | pierre | 2009-11-11 22:41:24 +0100 (Wed, 11 Nov 2009) | 1 line
Changed paths:
   A /trunk/packages/gdbint/gen-gdblib-inc.sh

 + Script to generate libgdb directory
------------------------------------------------------------------------
------------------------------------------------------------------------
r14154 | pierre | 2009-11-12 17:24:58 +0100 (Thu, 12 Nov 2009) | 1 line
Changed paths:
   M /trunk/packages/gdbint/gen-gdblib-inc.sh

 * Improve script to generate gdblib.inc
------------------------------------------------------------------------
------------------------------------------------------------------------
r14161 | pierre | 2009-11-12 22:05:19 +0100 (Thu, 12 Nov 2009) | 1 line
Changed paths:
   M /trunk/packages/gdbint/gen-gdblib-inc.sh

 * improve DJGPP output
------------------------------------------------------------------------
------------------------------------------------------------------------
r14374 | pierre | 2009-12-09 11:43:54 +0100 (Wed, 09 Dec 2009) | 1 line
Changed paths:
   M /trunk/packages/gdbint/gen-gdblib-inc.sh

 * also accept cc as compiler
------------------------------------------------------------------------
-------------

--- a/.gitattributes
+++ b/.gitattributes
@@ -1800,6 +1800,7 @@ packages/gdbint/examples/mingw.pas svneol=native#text/plain
 packages/gdbint/examples/symify.pp svneol=native#text/plain
 packages/gdbint/examples/testgdb.pp svneol=native#text/plain
 packages/gdbint/fpmake.pp svneol=native#text/plain
+packages/gdbint/gen-gdblib-inc.sh svneol=native#text/plain
 packages/gdbint/src/freadlin.pp svneol=native#text/x-pascal
 packages/gdbint/src/gdbcon.pp svneol=native#text/plain
 packages/gdbint/src/gdbint.pp svneol=native#text/plain
