--- Merging r14022 into '.': U    packages/fcl-process/src/process.pp --- Merging r14040 into '.': U    packages/Makefile U    packages/Makefile.fpc --- Merging r14138 into '.': A    rtl/solaris/i386/start.inc U    rtl/solaris/i386/sighndh.inc --- Merging r14139 into '.':  U   rtl/solaris/i386/start.inc --- Merging r14148 into '.': U    tests/test/cg/obj/readme.txt A    tests/test/cg/obj/solaris/i386 A    tests/test/cg/obj/solaris/i386/ctest.o A    tests/test/cg/obj/solaris/i386/tcext3.o A    tests/test/cg/obj/solaris/i386/tcext4.o A    tests/test/cg/obj/solaris/i386/tcext5.o --- Merging r14152 into '.': U    rtl/solaris/i386/start.inc --- Merging r14153 into '.': G    rtl/solaris/i386/start.inc --- Merging r14155 into '.': GU   rtl/solaris/i386/start.inc --- Merging r14173 into '.': U    rtl/solaris/Makefile.fpc U    rtl/solaris/Makefile --- Merging r14174 into '.': U    compiler/systems/i_sunos.pas --- Merging r14188 into '.': A    tests/test/cg/obj/solaris/i386/cpptcl1.o --- Merging r14203 into '.': U    rtl/solaris/i386/sighnd.inc G    rtl/solaris/i386/sighndh.inc --- Merging r14218 into '.': G    rtl/solaris/i386/sighnd.inc U    rtl/solaris/system.pp
# revisions: 14022,14040,14138,14139,14148,14152,14153,14155,14173,14174,14188,14203,14218
------------------------------------------------------------------------
r14022 | marco | 2009-11-03 23:16:39 +0100 (Tue, 03 Nov 2009) | 2 lines
Changed paths:
   M /trunk/packages/fcl-process/src/process.pp

 * patch (don't call waitprocess if not running) from Mantis 14707

------------------------------------------------------------------------
------------------------------------------------------------------------
r14040 | marco | 2009-11-04 12:29:45 +0100 (Wed, 04 Nov 2009) | 2 lines
Changed paths:
   M /trunk/packages/Makefile
   M /trunk/packages/Makefile.fpc

 * enabled libxml for FreeBSD. Some tests run, and the breakage of the others are not due to FreeBSD.

---------------------------------------------------------

--- a/.gitattributes
+++ b/.gitattributes
@@ -6570,6 +6570,7 @@ rtl/solaris/errno.inc svneol=native#text/plain
 rtl/solaris/errnostr.inc svneol=native#text/plain
 rtl/solaris/i386/sighnd.inc svneol=native#text/plain
 rtl/solaris/i386/sighndh.inc svneol=native#text/plain
+rtl/solaris/i386/start.inc svneol=native#text/plain
 rtl/solaris/osdefs.inc svneol=native#text/plain
 rtl/solaris/osmacro.inc svneol=native#text/plain
 rtl/solaris/ostypes.inc svneol=native#text/plain
@@ -7823,6 +7824,11 @@ tests/test/cg/obj/macos/powerpc/ctest.o -text
 tests/test/cg/obj/netbsd/m68k/ctest.o -text
 tests/test/cg/obj/os2/i386/ctest.o -text
 tests/test/cg/obj/readme.txt svneol=native#text/plain
+tests/test/cg/obj/solaris/i386/cpptcl1.o -text
+tests/test/cg/obj/solaris/i386/ctest.o -text
+tests/test/cg/obj/solaris/i386/tcext3.o -text
+tests/test/cg/obj/solaris/i386/tcext4.o -text
+tests/test/cg/obj/solaris/i386/tcext5.o -text
 tests/test/cg/obj/solaris/sparc/ctest.o -text
 tests/test/cg/obj/solaris/sparc/tcext3.o -text svneol=unset#unset
 tests/test/cg/obj/solaris/sparc/tcext4.o -text svneol=unset#unset
