--- a/.gitattributes
+++ b/.gitattributes
@@ -5526,11 +5526,12 @@ packages/zorba/Makefile.fpc svneol=native#text/plain
 packages/zorba/examples/simple/simple.lpi svneol=native#text/plain
 packages/zorba/examples/simple/simple.lpr svneol=native#text/plain
 packages/zorba/fpmake.pp svneol=native#text/plain
+packages/zorba/src/xqc.pas svneol=native#text/plain
+packages/zorba/src/xqc_error.inc svneol=native#text/plain
+packages/zorba/src/xqc_static_context_consts.inc svneol=native#text/plain
 packages/zorba/src/zorba.inc svneol=native#text/plain
 packages/zorba/src/zorba.pas svneol=native#text/plain
-packages/zorba/src/zorba_error.inc svneol=native#text/plain
 packages/zorba/src/zorba_options.inc svneol=native#text/plain
-packages/zorba/src/zorba_static_context_consts.inc svneol=native#text/plain
 packages/zorba/src/zorbadyn.pas svneol=native#text/plain
 rtl/COPYING.FPC -text
 rtl/COPYING.txt svneol=native#text/plain
@@ -6590,6 +6591,9 @@ rtl/solaris/termiosproc.inc svneol=native#text/plain
 rtl/solaris/unxconst.inc svneol=native#text/plain
 rtl/solaris/unxfunc.inc svneol=native#text/plain
 rtl/solaris/unxsockh.inc svneol=native#text/plain
+rtl/solaris/x86_64/sighnd.inc svneol=native#text/plain
+rtl/solaris/x86_64/sighndh.inc svneol=native#text/plain
+rtl/solaris/x86_64/start.inc svneol=native#text/plain
 rtl/sparc/int64p.inc svneol=native#text/plain
 rtl/sparc/makefile.cpu svneol=native#text/plain
 rtl/sparc/math.inc svneol=native#text/plain
