--- Merging r14461 into '.': U    rtl/objpas/typinfo.pp A    tests/webtbs/tw15377.pp --- Merging r14542 into '.': U    rtl/morphos/sysdir.inc --- Merging r14534 into '.': C    packages/Makefile A    packages/opencl A    packages/opencl/fpmake.pp A    packages/opencl/Makefile.fpc A    packages/opencl/src A    packages/opencl/src/cl.pp A    packages/opencl/src/cl_gl.pp A    packages/opencl/Makefile A    packages/opencl/examples A    packages/opencl/examples/basicsample.pas C    packages/Makefile.fpc --- Merging r14544 into '.': G    rtl/objpas/typinfo.pp A    tests/webtbs/tw15467.pp Summary of conflicts:   Text conflicts: 2
# revisions: 14461,14542,14534,14544
------------------------------------------------------------------------
r14461 | florian | 2009-12-22 12:36:47 +0100 (Tue, 22 Dec 2009) | 1 line
Changed paths:
   M /trunk/rtl/objpas/typinfo.pp
   A /trunk/tests/webtbs/tw15377.pp

* GetEnumName handles subrange types correctly, resolves #15377
------------------------------------------------------------------------
------------------------------------------------------------------------
r14542 | karoly | 2010-01-05 00:49:46 +0100 (Tue, 05 Jan 2010) | 2 lines
Changed paths:
   M /trunk/rtl/morphos/sysdir.inc

+ fixed sysdir.inc to follow recent rtl changes. trunk now cycles again on MorphOS.

------------------------------------------------------------------------
------------------------------------------------------------------------
r14534 | florian | 2010-01-03 19:26:07 +0100 (Sun, 03 Jan 2010) | 1 line
Changed paths:
   M /trunk/packages/Makefile
   M /trunk/packages/Makefile.fpc
   A /trunk/packages/opencl
   A /trunk/packages/opencl/Makefile
   A /trunk/packages/opencl/Makefile.fpc
   A /trunk/packages/opencl/examples
   A /trunk/packages/opencl/examples/basicsample.pas
   A /trunk/packages/opencl/fpmake.pp
   A /trunk/packages/opencl/src
   A /trunk/packages/opencl/src/cl.pp
   A /trunk/packages/opencl/src/cl_gl.pp

+ OpenCL package by Dmitry Boyarintsev

--- a/.gitattributes
+++ b/.gitattributes
@@ -3981,6 +3981,12 @@ packages/openal/src/alch.inc svneol=native#text/plain
 packages/openal/src/alexth.inc svneol=native#text/plain
 packages/openal/src/alh.inc svneol=native#text/plain
 packages/openal/src/openal.pas svneol=native#text/plain
+packages/opencl/Makefile svneol=native#text/plain
+packages/opencl/Makefile.fpc svneol=native#text/plain
+packages/opencl/examples/basicsample.pas svneol=native#text/pascal
+packages/opencl/fpmake.pp svneol=native#text/pascal
+packages/opencl/src/cl.pp svneol=native#text/pascal
+packages/opencl/src/cl_gl.pp svneol=native#text/pascal
 packages/opengl/Makefile svneol=native#text/plain
 packages/opengl/Makefile.fpc svneol=native#text/plain
 packages/opengl/examples/Makefile svneol=native#text/plain
@@ -9441,7 +9447,9 @@ tests/webtbs/tw14958b.pp svneol=native#text/plain
 tests/webtbs/tw1501.pp svneol=native#text/plain
 tests/webtbs/tw15296.pp svneol=native#text/plain
 tests/webtbs/tw1532.pp svneol=native#text/plain
+tests/webtbs/tw15377.pp svneol=native#text/pascal
 tests/webtbs/tw1539.pp svneol=native#text/plain
+tests/webtbs/tw15467.pp svneol=native#text/pascal
 tests/webtbs/tw1567.pp svneol=native#text/plain
 tests/webtbs/tw1573.pp svneol=native#text/plain
 tests/webtbs/tw1592.pp svneol=native#text/plain
