tests: add 2 fail dispinterface test
git-svn-id: trunk@14749 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8914,6 +8914,8 @@ tests/test/tclrprop.pp svneol=native#text/plain
 tests/test/tcmp.pp svneol=native#text/plain
 tests/test/tcmp0.pp svneol=native#text/plain
 tests/test/tdel1.pp svneol=native#text/plain
+tests/test/tdispinterface1a.pp svneol=native#text/pascal
+tests/test/tdispinterface1b.pp svneol=native#text/pascal
 tests/test/tendian1.pp svneol=native#text/plain
 tests/test/tenum1.pp svneol=native#text/plain
 tests/test/tenum2.pp svneol=native#text/plain
