--- a/.gitattributes
+++ b/.gitattributes
@@ -8916,6 +8916,7 @@ tests/test/tcmp0.pp svneol=native#text/plain
 tests/test/tdel1.pp svneol=native#text/plain
 tests/test/tdispinterface1a.pp svneol=native#text/pascal
 tests/test/tdispinterface1b.pp svneol=native#text/pascal
+tests/test/tdispinterface2.pp svneol=native#text/plain
 tests/test/tendian1.pp svneol=native#text/plain
 tests/test/tenum1.pp svneol=native#text/plain
 tests/test/tenum2.pp svneol=native#text/plain
