* support string constants > 255 chars * don't cut off anymore string constants silently at 255 chars
git-svn-id: trunk@14789 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7595,7 +7595,6 @@ tests/tbf/tb0109.pp svneol=native#text/plain
 tests/tbf/tb0110.pp svneol=native#text/plain
 tests/tbf/tb0111.pp svneol=native#text/plain
 tests/tbf/tb0112.pp svneol=native#text/plain
-tests/tbf/tb0113.pp svneol=native#text/plain
 tests/tbf/tb0114.pp svneol=native#text/plain
 tests/tbf/tb0115.pp svneol=native#text/plain
 tests/tbf/tb0116.pp svneol=native#text/plain
@@ -7712,6 +7711,7 @@ tests/tbf/tb0215d.pp svneol=native#text/plain
 tests/tbf/tb0215e.pp svneol=native#text/plain
 tests/tbf/tb0216.pp svneol=native#text/plain
 tests/tbf/tb0217.pp svneol=native#text/plain
+tests/tbf/tb0218.pp svneol=native#text/plain
 tests/tbf/ub0115.pp svneol=native#text/plain
 tests/tbf/ub0149.pp svneol=native#text/plain
 tests/tbf/ub0158a.pp svneol=native#text/plain
@@ -8274,6 +8274,7 @@ tests/tbs/tb0564.pp svneol=native#text/plain
 tests/tbs/tb0565.pp svneol=native#text/plain
 tests/tbs/tb0566.pp svneol=native#text/plain
 tests/tbs/tb0567.pp svneol=native#text/plain
+tests/tbs/tb0568.pp svneol=native#text/plain
 tests/tbs/tb205.pp svneol=native#text/plain
 tests/tbs/ub0060.pp svneol=native#text/plain
 tests/tbs/ub0069.pp svneol=native#text/plain
@@ -8913,6 +8914,8 @@ tests/test/tclassinfo1.pp svneol=native#text/pascal
 tests/test/tclrprop.pp svneol=native#text/plain
 tests/test/tcmp.pp svneol=native#text/plain
 tests/test/tcmp0.pp svneol=native#text/plain
+tests/test/tcstring1.pp svneol=native#text/pascal
+tests/test/tcstring2.pp svneol=native#text/pascal
 tests/test/tdel1.pp svneol=native#text/plain
 tests/test/tdispinterface1a.pp svneol=native#text/pascal
 tests/test/tdispinterface1b.pp svneol=native#text/pascal
