* read/write new cstringpattern correctly from/to ppu files + test
git-svn-id: trunk@14791 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8275,6 +8275,7 @@ tests/tbs/tb0565.pp svneol=native#text/plain
 tests/tbs/tb0566.pp svneol=native#text/plain
 tests/tbs/tb0567.pp svneol=native#text/plain
 tests/tbs/tb0568.pp svneol=native#text/plain
+tests/tbs/tb0569.pp svneol=native#text/pascal
 tests/tbs/tb205.pp svneol=native#text/plain
 tests/tbs/ub0060.pp svneol=native#text/plain
 tests/tbs/ub0069.pp svneol=native#text/plain
@@ -8311,6 +8312,7 @@ tests/tbs/ub0461.pp svneol=native#text/plain
 tests/tbs/ub0489.pp svneol=native#text/plain
 tests/tbs/ub0489b.pp svneol=native#text/plain
 tests/tbs/ub0506.pp svneol=native#text/plain
+tests/tbs/ub0569.pp svneol=native#text/pascal
 tests/test/README.txt svneol=native#text/plain
 tests/test/alglib/t_testconvunit.pp svneol=native#text/plain
 tests/test/alglib/t_testcorrunit.pp svneol=native#text/plain
