* fpcres: Implemented TClosableFileStream to automatically release and acquire   file handles as needed. It avoids running out of file descriptors   (fixes bug #15586)
git-svn-id: trunk@14805 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -11209,6 +11209,7 @@ utils/fpcm/printmakefilefpcrequirements.sh svneol=native#text/plain
 utils/fpcm/readme.txt svneol=native#text/plain
 utils/fpcres/Makefile svneol=native#text/plain
 utils/fpcres/Makefile.fpc svneol=native#text/plain
+utils/fpcres/closablefilestream.pas svneol=native#text/plain
 utils/fpcres/fpcres.pas svneol=native#text/plain
 utils/fpcres/msghandler.pas svneol=native#text/plain
 utils/fpcres/paramparser.pas svneol=native#text/plain
