* Merging fcl-web_joost branch into trunk --- Merging r13710 through r14654 into '.':  G   utils/debugsvr/README.txt  G   utils/fpmc/README.txt  G   utils/tply/COPYING.txt  G   utils/tply/README.txt  G   utils/fpdoc/COPYING.txt  G   utils/fpdoc/README.txt  G   utils/fppkg/README.txt  G   utils/README.txt  G   utils/h2pas/README.txt  G   ide/README.txt  G   ide/TODO.txt  G   rtl/macos/README.txt  G   rtl/freebsd/x86_64/cprt0.as  G   rtl/freebsd/x86_64/gprt0.as  G   rtl/freebsd/buildrtl.pp  G   rtl/freebsd/buildrtl.lpi  G   rtl/COPYING.txt  G   rtl/netware/README.txt  G   rtl/inc/ustrings.inc C    rtl/inc/objpash.inc  G   rtl/inc/ustringh.inc  G   rtl/README.txt  G   rtl/objpas/README.txt  G   tests/test/README.txt  G   tests/test/tunistr6.pp  G   tests/test/tunistr1.pp  G   tests/test/tunistr7.pp  G   tests/test/tunistr2.pp  G   tests/test/opt/README.txt  G   tests/test/tunistr4.pp    C tests/test/tobject5.pp  G   tests/test/tunistr5.pp  G   tests/webtbs/uw13345y.pp  G   tests/webtbs/tw11846a.pp  G   tests/webtbs/tw12993.pp  G   tests/webtbs/tw11846b.pp --- Merging r13710 through r14654 into 'tests/webtbf/tw13815.pp':  U   tests/webtbf/tw13815.pp --- Merging r13710 through r14654 into 'tests/tbf/tb0216.pp':  U   tests/tbf/tb0216.pp --- Merging r13710 through r14654 into '.':  G   compiler/ccharset.pas  G   compiler/README.txt  G   compiler/COPYING.txt  G   compiler/optloop.pas  G   compiler/utils/README.txt  G   packages/sdl/README.txt  G   packages/fcl-net/README.txt --- Merging r13710 through r14654 into 'packages/fcl-xml/tests/README_DOM.txt':  U   packages/fcl-xml/tests/README_DOM.txt --- Merging r13710 through r14654 into '.':  G   packages/fcl-xml/tests/README.txt  G   packages/fcl-xml/src/README.txt --- Merging r13710 through r14654 into 'packages/unzip/src/unzip51g.pp':  U   packages/unzip/src/unzip51g.pp --- Merging r13710 through r14654 into '.':  G   packages/libc/README.txt  G   packages/newt/README.txt  G   packages/fcl-process/src/dummy  G   packages/fc

--- a/.gitattributes
+++ b/.gitattributes
@@ -2173,6 +2173,7 @@ packages/fcl-web/src/fphttp.pp svneol=native#text/plain
 packages/fcl-web/src/fptemplate.pp svneol=native#text/plain
 packages/fcl-web/src/fpweb.pp svneol=native#text/plain
 packages/fcl-web/src/httpdefs.pp svneol=native#text/plain
+packages/fcl-web/src/webpage.pp svneol=native#text/plain
 packages/fcl-web/src/websession.pp svneol=native#text/plain
 packages/fcl-web/src/webutil.pp svneol=native#text/plain
 packages/fcl-xml/Makefile svneol=native#text/plain
