* don't give a "NoThreadError" for any default rtl/basicevent* routines,     so the TMultiReadExclusiveWriteSynchronizer routines can be safely     executed even with the default thread manager -> removed ismultithread     checks, so that it keeps working even if ismultithread is set to true     between acquiring and freeing a lock (mantis #15619)
git-svn-id: trunk@14830 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10241,6 +10241,7 @@ tests/webtbs/tw15500.pp svneol=native#text/plain
 tests/webtbs/tw15504.pp svneol=native#text/plain
 tests/webtbs/tw15530.pp svneol=native#text/pascal
 tests/webtbs/tw15607.pp svneol=native#text/plain
+tests/webtbs/tw15619.pp svneol=native#text/plain
 tests/webtbs/tw1567.pp svneol=native#text/plain
 tests/webtbs/tw1573.pp svneol=native#text/plain
 tests/webtbs/tw1592.pp svneol=native#text/plain
