+ support of compiler intrinsic sar* using a patch by Benjamin Rosseaux, resolves #15606
git-svn-id: trunk@14834 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8576,6 +8576,7 @@ tests/test/cg/traise4.pp svneol=native#text/plain
 tests/test/cg/traise5.pp svneol=native#text/plain
 tests/test/cg/traise6.pp svneol=native#text/plain
 tests/test/cg/treadwrt.pp svneol=native#text/plain
+tests/test/cg/tsar1.pp svneol=native#text/pascal
 tests/test/cg/tshlshr.pp svneol=native#text/plain
 tests/test/cg/tstr.pp svneol=native#text/plain
 tests/test/cg/tsubst.pp svneol=native#text/plain
