* allow any kind of fields in Object Pascal classes that are passed to     Objective-C methods or which are fields of Objective-C classes (since they     are basically opaque to the Objective-C runtime) + fixed tobjc11 so it     expects classes to be encoded as opaque types   * give a proper error message when using illegal field/parameter types in     Objective-C classes/methods instead of an internal error (only checked     during rtti generation rather than during parsing, because during parsing     some types may still be forwarddefs)   * split objcutil in objcdef and objcutil, with objcdef depending only on     the symtable so it can be used in symdef
git-svn-id: trunk@14838 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -326,6 +326,7 @@ compiler/nopt.pas svneol=native#text/plain
 compiler/nset.pas svneol=native#text/plain
 compiler/nstate.pas svneol=native#text/plain
 compiler/nutils.pas svneol=native#text/plain
+compiler/objcdef.pas svneol=native#text/plain
 compiler/objcgutl.pas svneol=native#text/plain
 compiler/objcutil.pas svneol=native#text/plain
 compiler/ogbase.pas svneol=native#text/plain
@@ -9108,6 +9109,9 @@ tests/test/tobjc30a.pp svneol=native#text/plain
 tests/test/tobjc30b.pp svneol=native#text/plain
 tests/test/tobjc30c.pp svneol=native#text/plain
 tests/test/tobjc31.pp svneol=native#text/plain
+tests/test/tobjc32.pp svneol=native#text/plain
+tests/test/tobjc32a.pp svneol=native#text/plain
+tests/test/tobjc32b.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
 tests/test/tobjc4a.pp svneol=native#text/plain
 tests/test/tobjc5.pp svneol=native#text/plain
